--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
+    - name: Run actions/checkout@v3
       uses: actions/checkout@v3
+      
+    - name: Set up Python 3.12.7
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.12.7
 
     - name: Setup Miniconda
       uses: conda-incubator/setup-miniconda@v2
@@ -20,6 +25,11 @@ jobs:
         activate-environment: mlflow-env
         environment-file: MLProject/conda.yaml
         auto-activate-base: false
+
+    - name: Check Env
+      run: |
+        python --version
+        conda --version
 
     - name: Run MLflow Project
       shell: bash -l {0}
@@ -39,12 +49,18 @@ jobs:
         RUN_ID=$(ls -t MLProject/mlruns/0 | head -n 1)
         echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
 
-    - name: Build Docker image from MLflow model
+    - name: Upload to GitHub LFS
+      run: |
+        git lfs install
+        git add MLProject/mlruns
+        git commit -m "Upload model artifacts to GitHub LFS [skip ci]" || echo "No changes to commit"
+        git push origin main || echo "No changes to push"
+
+    - name: Build Docker image
       if: ${{ steps.get_run_id.outputs.run_id != '' }}
       shell: bash -l {0}
       run: |
         cd MLProject
-        conda activate mlflow-env
         mlflow models build-docker \
           --model-uri runs:/${{ steps.get_run_id.outputs.run_id }}/model \
           --name behavior-classifier
@@ -52,8 +68,11 @@ jobs:
 
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+    
+    - name: Tag Docker Image
+      run : |
+        docker tag behavior-classifier:latest ${{ secrets.DOCKER_USERNAME }}/behavior-classifier:latest
 
     - name: Push Docker Image
       run: |
-        docker tag behavior-classifier:latest ${{ secrets.DOCKER_USERNAME }}/behavior-classifier:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/behavior-classifier:latest
